// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`첫 마을 칸 스냅샷 > 구역과 나무 종류 > trees 1`] = `
"deedeedeedeedeedeedeedeedeedeedeedeedeedeedeedee
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e.f....f........d...d........d....d..d....e.e.ee
d.................f............f...............e
e........................................e.e.e.d
e..............................................e
d.........................................e.e.ee
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e.................d............d...............e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
d..............................................e
e..............................................d
e..............................................e
deedeedeedeedeedeedeedeedeedeedeedeedeedeedeedee
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................"
`;

exports[`첫 마을 칸 스냅샷 > 구역과 나무 종류 > zones 1`] = `
"................................................
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
.........................................vvvvvv.
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
.........................................hhhhhh.
.........................................hhhhhh.
.........................................hhhhhh.
.........................................hhhhhh.
.........................................hhhhhh.
................................................
................................................
.......................dddd.....................
.......................dddd.....................
.......................dddd.....................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................
................................................"
`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [] > indoor 1`] = `"2051e5e238e88f9c55f933ff252241c3b32dab08b769c94f54d474797ba5e074"`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
T..RRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
T..RRRRR...llll......RRRRRRR......RRRRR........T
T..#####...llll......SSSSSSS......#####..vv.vvvT
T..##D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____KfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________#########_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [] > walkable 1`] = `"1bcb21973afe702f145764816057f35c8fdb4e4b80dfc3148dbd2055f9bbfafc"`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0,1,2,3] > indoor 1`] = `"9136ec7ce6da210e2ea0025b8384d9bff9493e7da038ca9f19b78d946c206349"`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0,1,2,3] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
T..RRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
T..RRRRR...llll......RRRRRRR......RRRRR........T
T..#####...llll......SSSSSSS......#####..vv.vvvT
T..##D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffJ_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____JffnffeffnffJ_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________#########_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0,1,2,3] > walkable 1`] = `"2ab48e50869f787e7ac9aa2b233ac1823d638ad18bcd4cdb5b99e8f2a9699e77"`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0] > indoor 1`] = `"fc3a0a05e85d4a7f15cedf2399bdba2c7d813c8e7c21340e0d63a9e0fad4a8af"`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
T..RRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
T..RRRRR...llll......RRRRRRR......RRRRR........T
T..#####...llll......SSSSSSS......#####..vv.vvvT
T..##D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________#########_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 0단계 · 열린 문 [0] > walkable 1`] = `"1aafc915d14d7a96ecc8b54693caf14ae04e4d114b560b2186cb9c0689500335"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [] > indoor 1`] = `"ef221b415135f9e0287ff6a7a15647352a83468782eb5fa6257867018942dc71"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____KfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D###_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [] > walkable 1`] = `"362697556955e9ca20ee27420d7d218d9819050cb3df58e548a4832513c9a433"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0,1,2,3] > indoor 1`] = `"8c6e17ec7a4ce9aec2ce26ff728f1f211e6736fe2b18a3dbb20ae4c2a55354b7"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0,1,2,3] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffJ_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____JffnffeffnffJ_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D###_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0,1,2,3] > walkable 1`] = `"152c411e9cb22743a6cf13d4e44fbd2d202373f5ef3e62f7ecf041a3ecdb6f1e"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0] > indoor 1`] = `"86a0ec4a5843b455229b5b954d2821e526bed8e566f60240ba68a6510eda10aa"`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D###_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________#fffffff#_______________________
________________####E####_______________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 1단계 · 열린 문 [0] > walkable 1`] = `"1675caa018e2284584386de931ceabea7bca04f533b49ad9361d51de7771db37"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [] > indoor 1`] = `"18fc7c58b254479101261be236683226cc7bbdac494c3e5742842c676ef11f58"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____KfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D##########________________
________________#fffffff#ffffff#________________
________________#fffffffDffffff#________________
________________#fffffff#ffffff#________________
________________#fffffff#ffffff#________________
________________####E###########________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [] > walkable 1`] = `"f8b22261b5c97c14446a2e126b818ca7aaf796f27f03d85cfb63b8f8d6fa7a46"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0,1,2,3] > indoor 1`] = `"c9886118b9c5f3c72e43384c930f737a29682e95bd7d08a15f769af5d09cc81d"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0,1,2,3] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffJ_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____JffnffeffnffJ_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D##########________________
________________#fffffff#ffffff#________________
________________#fffffffDffffff#________________
________________#fffffff#ffffff#________________
________________#fffffff#ffffff#________________
________________####E###########________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0,1,2,3] > walkable 1`] = `"654437306c8682b745e6ccb1e2e99ac17cfc7fc2fb4b97c8497e465450990725"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0] > indoor 1`] = `"a3e1f3ca659b67e35c6650afdb7b586744c71b6f6467d0b18274482329084f45"`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
________________#####D##########________________
________________#fffffff#ffffff#________________
________________#fffffffDffffff#________________
________________#fffffff#ffffff#________________
________________#fffffff#ffffff#________________
________________####E###########________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 2단계 · 열린 문 [0] > walkable 1`] = `"9f79731ae1a9a5d63b997e40156fcb7cc31fee234b40a45c61263c39fa212f7e"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [] > indoor 1`] = `"a8c75afacde600bfb93e408d4e1265f27e8c470dd210f0de31e1a659ef535e6f"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____KfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
______###########_#fffff#_______________________
______#fffffffff#_#fffff#_______________________
______#fffffffff#####D##########________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffffDfffffffDffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff####E###########________________
______#fffffffff#_______________________________
______###########_______________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [] > walkable 1`] = `"07fa0c6410d841315b102f69d14271c19be3298cc722eeed8a51610a97491e88"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0,1,2,3] > indoor 1`] = `"7274e87c66ffb47f91d3890e972781c1c8519d1a068be2fe9d0adc255192ed1b"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0,1,2,3] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffJ_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____JffnffeffnffJ_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
______###########_#fffff#_______________________
______#fffffffff#_#fffff#_______________________
______#fffffffff#####D##########________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffffDfffffffDffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff####E###########________________
______#fffffffff#_______________________________
______###########_______________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0,1,2,3] > walkable 1`] = `"bfe59d8250507efdd2972e9844da1db102962b969a7803732dd47b89821ed42a"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0] > indoor 1`] = `"2eaf8b721ed983f567f068ee21b85c0cb77220206fbf6f1949c1d2fe6ac4450f"`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0] > tiles 1`] = `
"TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
T................j.............................T
T........................................vv.vvvT
T..............................................T
TRRRRRRR...llll......RRRRRRR......RRRRR..vv.vvvT
TRRRRRRR...llll......RRRRRRR......RRRRR........T
T#######...llll......SSSSSSS......#####..vv.vvvT
T####D##.............SSSLSSS......##D##........T
T.B..,q.*............*..,..*......*.,.*..vv.vvvT
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,.....jT
T.T....T.,,...B.T...T...,,...T....T..T.,,.o.o.oT
T........,,.......T,,,,,,,,,,,,T.......,,......T
T..RRRRR.,,.RRRRR.,,m,,,,,,,,m,,.RRRRR.,,o.o.o.T
T..RRRRR.,,.RRRRR.,,,,,,w,,,,,,,.RRRRR.,,......T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,.o.o.oT
T.O##D##.,,.##D##.,,,,,,,,,,,,,,.##D##.,,......T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T........,,.......,,,,,,,,,,,,,,.......,,,,,,,,T
T..RRRRR.,,.RRRRR.,,,,,,,,,,,,,,.RRRRR.,,,,,,,,T
T..RRRRR.,,.RRRRR.,,B,,,,,,,,B,,.RRRRR.,,,A,,P,T
T..#####.,,.#####.,,,,,,,,,,,,,,.#####.,,,,,,,,T
T..##D##.,,.##D##.T,,,,,,,,,,,,T.##D##.,,,,,,,,T
Tj.*.,.*.,,.*.,.*.......,,.......*.,.*.,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T.xxx,xxx,,yyyyy........,,.....................T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,yyyyy..RRRRR.,,.RRRRR..RRRRR..RRRRR.T
T.x.....x,,.......#####.,,.#####..#####..#####.T
Tjxxxxxxx,,..B....##D##.,,.##D##..##D##..##D##.T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,T
T~~rrrrrrr~~~~~~~~~~~~~~=~~~~~~~~~~~rrrrr~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~=u~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
T~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~T
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
________________________________________________
__##########____##########____##########________
__#OOfZZfZg#____#bbZfhffg#____#bfZZfhfZ#________
__#Zffffffg#____#fffffffg#____#fffffffZ#________
__#fZnnZfff#____#ffZnnZfZ#____#ffzzffff#________
__#ffffzzff#____#ffffffff#____#ZnzzfffZ#________
__#Zfffzzzb#____#zzzffffZ#____#fffffZZf#________
__#ffffffff#____#ffffffff#____#Zfffffff#________
__####E#####____####E#####____####E#####________
______________________________#############_____
__##########____##########____#sssfGGGfsss#_____
__#WWZfssfb#____#sgggfZZb#____#fffffffffff#_____
__#fffffffz#____#fffffffz#____JfffffefffffK_____
__#fffffffZ#____#fffffffZ#____#ffnffeffnff#_____
__#ZfzzfnZf#____#pfffnZff#____#fffffefffff#_____
__#ffzzffff#____#Zffffffp#____KffnffeffnffK_____
__#Zfffffff#____#ffzzffff#____#fffffefffff#_____
__####E#####____####E#####____#pfffffffffp#_____
______________________________######E######_____
________________________________________________
__####MMM####_________________##N#VVV#N#####N###
__#QQQfffsss#_________________#YYYfffsss##ggffs#
__#fffffffff#_________________#fffffffff##fffff#
__#fffffffff#_________________#fffffffff##ZnfnZ#
__#ffffnffff#_________________#ffffnffff##fffff#
__#ffffeffff#_________________#ffffeffff##ffffZ#
__#pfffefffp#_________________#pfffefffp####E###
__#####E#####_________________#####E#####_______
________________________________________________
________________________________________________
__###N#FF#N###__##N#CCC#N##___##N#VVV#N##_______
__#ssffffffgg#__#QQQfffsss#___#YYYfffsss#_______
__#fffzffzfff#__#fffffffff#___#fffffffff#_______
__#ZfznnnnzfZ#__#fffffffff#___#fffffffff#_______
__#ffffffffff#__#ffffnffff#___#ffffnffff#_______
__#fzzfffffff#__#fffzzffff#___#fffzzzfff#_______
__#pffffffffp#__#pffzzfffp#___#ZffzzzffZ#_______
__#####E######__#####E#####___#####E#####_______
________________________________________________
________________________________________________
________________________________________________
__##########__##N#VVV###__##########__##########
__#kkffssZb#__#gffffffb#__#sssffggg#__#bffhffgg#
__#ffffffff#__#ffffffff#__#fffffffZ#__#ffffffff#
__#ZffffffZ#__#ZfZnnZfZ#__#ffffffff#__#ZffffffZ#
__#ffZnffff#__#ffffffff#__#pfZnnZfp#__#fZnffffZ#
__#fffffzzf#__#fzzffffZ#__#ffffffff#__#ffffffff#
__#Zfffffff#__#fzzfffff#__#Zfffffzz#__#zffffzzf#
__####E#####__####E#####__####E#####__####E#####
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
________________________________________________
__________________#####N#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
__________________#fffff#_______________________
______###########_#fffff#_______________________
______#fffffffff#_#fffff#_______________________
______#fffffffff#####D##########________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffffDfffffffDffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff#fffffff#ffffff#________________
______#fffffffff####E###########________________
______#fffffffff#_______________________________
______###########_______________________________
________________________________________________
________________________________________________"
`;

exports[`첫 마을 칸 스냅샷 > 집 3단계 · 열린 문 [0] > walkable 1`] = `"d2e899cd5f4530f09373899cb284ac52897b894f9005909db6729084e3953b96"`;
